syntax = "proto3";

package endpoints.flunky.simulator;

option java_multiple_files = true;
option java_outer_classname = "GameObjects";
option java_package = "de.flunkyteam.endpoints.projects.simulator";

message GameState{
  repeated string abgegeben = 6;
  EnumRoundPhase roundPhase = 7;
  RuleConfig ruleConfig = 8;

  string throwingPlayer = 10;
  int64 strafbierTeamA = 11;
  int64 strafbierTeamB = 12;
}

message RuleConfig{
  int64 restingPeriodLength = 1;
}


enum EnumRoundPhase{
  UNKNOWN_PHASE = 0;
  NO_ACTIVE_GAME_PHASE = 1;
  TEAM_A_THROWING_PHASE = 2;
  TEAM_B_THROWING_PHASE = 3;
  RESTING_PHASE = 4;
  TEAM_A_WON_PHASE = 5;
  TEAM_B_WON_PHASE = 6;
}

enum EnumThrowStrength {
  UNKNOWN_THROW_STRENGTH = 0;
  SOFT_THROW_STRENGTH = 1;
  MEDIUM_THROW_STRENGTH = 2;
  HARD_THROW_STRENGTH = 3;
}

enum EnumTeams{
  UNKNOWN_TEAMS = 0;
  SPECTATOR_TEAMS = 1;
  TEAM_A_TEAMS = 2;
  TEAM_B_TEAMS =3;
}